fix new endpoint name
